# AlgoTradeSense

./: .env  .gitignore  .replit  app.py  pyproject.toml  replit.md  temp_LSTM_ADAUSDT_1h_20250822_002830_load.h5  temp_LSTM_ADAUSDT_4h_20250822_013614_load.h5  temp_LSTM_BTCUSDT_1h_20250820_025425_load.h5  trading_platform.db
.local/state/replit/agent/filesystem/: filesystem_state.json
pages/: 1_Dashboard.py  2_Model_Training.py  3_Signal_Generation.py  4_Backtesting.py  5_Analytics.py  6_Model_Comparison.py
utils/: backtesting_engine.py  binance_client.py  chart_utils.py  data_processor.py  database.py  ml_models.py  pattern_recognition.py  signal_generator.py  support_resistance
